			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

11-Dec-2005
~~~~~~~~~~~
Make Path optional in PanelRemove SOAP call, allowing removal of items based
only on their label (Jonatan Liljedahl).
Bugfix: The install script failed to compile ROX-Filer on Debian systems, due
	to a bug in recent versions of xterm (Vincent Lefèvre). Added
	workaround.
Bugfix: On 64-bit systems communication between ROX-Filer processes didn't
	work, because GDK uses sizeof(long) bytes (not always 4 bytes) to store
	a 32 bit property (Lucas Hazel).

29-Nov-2005
~~~~~~~~~~~
Removed 'Open AVFS' from menu. It doesn't do anything on most systems, and you
can always add it with 'Customise menu...' if you want it (Thomas Leonard).
Better support for old GNOME themes with GNOME-specific MIME names (Dennis
Tomas).

21-Nov-2005
~~~~~~~~~~~
Bugfix: Let -R work again (Stephen Watson).

12-Nov-2005
~~~~~~~~~~~
Added initial support for .desktop files (Thomas Leonard). They are now shown
as executable, with the appropriate icons, and clicking on them runs the
application.
Bugfix: If stdin wasn't set when ROX-Filer was started it could get used for
	the X connection, before ROX-Filer got around to replacing it with
	/dev/null (Thomas Leonard).

28-Oct-2005
~~~~~~~~~~~
Added Hungarian translation for the <About> section in AppInfo.xml
(Andras Mohari).

25-Oct-2005
~~~~~~~~~~~
Updated Japanese translation (Hiroaki Tanaka).

22-Oct-2005
~~~~~~~~~~~
In details mode, clicking on an item while the keyboard focus is visible
moves the focus to the item clicked on (suggested by Anthony DiSante).

19-Oct-2005
~~~~~~~~~~~
Updated Hungarian translation (Andras Mohari).

18-Oct-2005
~~~~~~~~~~~
Updated Estonian translation (Teet Tärno).
Bugfix: An (extremely unlikely to occur) error message was missing some
	arguments (Thomas Leonard; spotted by Andras Mohari).

17-Oct-2005
~~~~~~~~~~~
Updated it.po and Manual-it.xml (Yuri Bongiorno)

02-Oct-2005
~~~~~~~~~~~