@@ -4,6 +4,7 @@
 
 11-Dec-2005
 ~~~~~~~~~~~
+Updated French manual translation (Arnaud Calvo).
 Make Path optional in PanelRemove SOAP call, allowing removal of items based
 only on their label (Jonatan Liljedahl).
 Bugfix: The install script failed to compile ROX-Filer on Debian systems, due
